--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && NEXT_DISABLE_SSG=1 next build"
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
     "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
@@ -25,30 +25,30 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.90.18",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
-    "next": "16.1.2",
-    "prisma": "^6.19.2",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "15.1.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "@tailwindcss/postcss": "^4.1.18",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
-    "eslint-config-next": "16.1.2",
-    "typescript": "^5",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.23"
+    "prisma": "^6.19.2",
+    "typescript": "^5"
   }
 }
